# mx8-runtime

./: .gitignore  AGENTS.md  ARCHITECTURE.MD  Cargo.toml  README.md  implementation.md
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: nvdec-gpu-validation.yml  pip-install-smoke.yml  wheels.yml
crates/mx8-coordinator/: Cargo.toml
crates/mx8-coordinator/src/: leader_lease.rs  lease_log.rs  main.rs  state_store.rs
crates/mx8-coordinator/tests/: ha_failover.rs
crates/mx8-core/: Cargo.toml
crates/mx8-core/src/: dataset_link.rs  lib.rs  types.rs
crates/mx8-core/tests/: manifest_record.rs  work_range.rs
crates/mx8-manifest-store/: Cargo.toml
crates/mx8-manifest-store/src/: fs.rs  lib.rs  s3.rs  sha256.rs
crates/mx8-observe/: Cargo.toml
crates/mx8-observe/src/: lib.rs  logging.rs  metrics.rs
crates/mx8-proto/: Cargo.toml  build.rs
crates/mx8-proto/proto/: mx8.proto
crates/mx8-proto/src/: lib.rs
crates/mx8-proto/tests/: roundtrip.rs
crates/mx8-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/mx8-py/python/: m5_autotune_memory_pressure_sim.py  m5_distributed_resume_gate.py  m5_epoch_boundary_membership_gate.py  m5_minimal.py  m5_stats_gate.py  m5_torch_ddp_autotune_ab_gate.py  m5_torch_ddp_ckpt_crash_demo.py  m5_torch_ddp_demo.py  m5_torch_ddp_nodupes_gate.py  m5_torch_minimal.py  m5_torch_train_minimal.py  m6_audio_gate.py  m6_image_aug_gate.py  m6_image_decode_backend_bench.py  m6_image_pillow_train_minimal.py  m6_text_gate.py  m6_vision_decode_backend_bench.py  m6_vision_pillow_train_minimal.py  m7_mix_gate.py  m7_mix_multirank_gate.py  m8_build_video_direct_write_op.py  m8_video_device_output_gate.py  m8_video_direct_decode_stress_gate.py  m8_video_nvdec_fallback_gate.py  m8_video_nvdec_pressure_gate.py  m8_video_nvdec_throughput_gate.py  m8_video_stage1_gate.py  m8_video_stage2a_gate.py  m8_video_stage2b_gate.py  m8_video_stage2b_stress_gate.py  m8_video_stage3a_backend_gate.py  m8_zero_copy_from_blob_spike.py  m9_transform_gate.py  mx8_video_direct_write_op.cpp
crates/mx8-py/python/mx8/: __init__.py
crates/mx8-py/src/: api.rs  audio_loader.rs  autotune.rs  checkpoint.rs  common.rs  data_loader.rs  distributed.rs  image_loader.rs  lib.rs  mix_loader.rs  net_pressure.rs  prelude.rs  stats.rs  text_loader.rs  transform_runtime.rs  video_loader.rs
crates/mx8-runtime/: Cargo.toml
crates/mx8-runtime/src/: azure.rs  gcs.rs  lib.rs  pipeline.rs  s3.rs  sink.rs  types.rs
crates/mx8-runtime/tests/: backpressure.rs  http_prefetch.rs  manifest_pipeline.rs  prefetch_order.rs
crates/mx8-snapshot/: Cargo.toml
crates/mx8-snapshot/src/: labels.rs  lib.rs  pack_dir.rs  pack_s3.rs  video_stage1.rs  video_stage2d.rs
crates/mx8-tui/: Cargo.toml
crates/mx8-tui/src/: main.rs
crates/mx8-wire/: Cargo.toml
crates/mx8-wire/src/: lib.rs
crates/mx8d-agent/: Cargo.toml
crates/mx8d-agent/src/: main.rs
docs/: cli_reference.md  compatibility_policy.md  deployment_guide.md  design_partner_onboarding_checklist.md  documentation_backlog.md  env_reference.md  grpc_contract.md  ha_contract.md  memory_contract.md  mix_gate_runbook.md  mix_v17_contract.md  nvdec_decoder.md  prod_runbook.md  python_api.md  s3_runtime_tuning.md  security_model.md  source_resolver_protocol.md  troubleshooting.md  tui.md  user_guide.md  v1_6_zero_manifest_todo.md  v1_autotune_api_contract.md  v1_autotune_todo.md  video_ga_checklist.md  vision_labels.md  zero_copy_v2_fix_first.md  zero_manifest.md
docs/releases/: v1.0.4.md  v1.0.5.md
docs/vision/: ebpf_linux_validation.md  ebpf_phase1_checklist.md  ebpf_telemetry_loop.md  mx8_serve_architecture.md
patches/hf-hub/: Cargo.toml  README.md
scripts/: audio_gate.sh  autotune_memory_pressure_sim.sh  azure_gate.sh  build_wheel.sh  check.sh  coordinator_restart_gate.sh  demo2_local.sh  demo2_minio.sh  demo2_minio_scale.sh  direct_stream_burnin.sh  distributed_resume_gate.sh  ha_failover_gate.sh  http_backend_gate.sh  image_aug_gate.sh  leader_fencing_gate.sh  minio_gate.sh  minio_manifest_store_gate.sh  minio_pack_gate.sh  minio_s3_prefix_recursive_gate.sh  minio_s3_prefix_snapshot_gate.sh  minio_video_stage1_gate.sh  mix_gate.sh  mix_multirank_gate.sh  pip_wheel_smoke.sh  prod_readiness.sh  py_image_decode_backend_bench.sh  py_local_image_pillow_gate.sh  py_local_vision_pillow_gate.sh  py_minio_image_gate.sh  py_minio_image_pillow_gate.sh  py_minio_imagefolder_gate.sh  py_minio_vision_pillow_gate.sh  py_smoke.sh  py_vision_decode_backend_bench.sh  release_stage2c.sh  smoke.sh  soak_demo2_minio_scale.sh  state_store_gate.sh  text_gate.sh  torch_ddp_gate.sh  (+22 more)
skills/alex-product-partner/: SKILL.md
skills/alex-product-partner/agents/: openai.yaml
skills/david/: SKILL.md
