[workspace]
resolver = "2"
members = [
  "crates/mx8-core",
  "crates/mx8-observe",
  "crates/mx8-proto",
  "crates/mx8-wire",
  "crates/mx8-manifest-store",
  "crates/mx8-snapshot",
  "crates/mx8-runtime",
  "crates/mx8-py",
  "crates/mx8d-agent",
  "crates/mx8-coordinator",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
prost = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3 = { version = "0.21", features = ["abi3-py38"] }
