[package]
name = "mx8-coordinator"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
s3 = ["mx8-manifest-store/s3", "mx8-snapshot/s3"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

mx8-observe = { path = "../mx8-observe" }
mx8-proto = { path = "../mx8-proto" }
mx8-core = { path = "../mx8-core" }
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-snapshot = { path = "../mx8-snapshot" }
