[package]
name = "mx8-manifest-store"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[features]
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio"]

[dependencies]
mx8-core = { path = "../mx8-core" }
thiserror.workspace = true
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
