[package]
name = "mx8-py"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "mx8"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
anyhow.workspace = true
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-runtime = { path = "../mx8-runtime" }
mx8-snapshot = { path = "../mx8-snapshot" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio.workspace = true
