[package]
name = "mx8-py"
version = "0.0.6"
edition.workspace = true
license.workspace = true

[lib]
name = "mx8"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mx8-core = { path = "../mx8-core" }
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-proto = { path = "../mx8-proto" }
mx8-runtime = { path = "../mx8-runtime", features = ["s3"] }
mx8-snapshot = { path = "../mx8-snapshot", features = ["s3"] }
mx8-wire = { path = "../mx8-wire" }
pyo3 = { workspace = true, features = ["extension-module"] }
tokio.workspace = true
tonic.workspace = true
