[package]
name = "mx8-py"
version = "1.0.8-rc.1"
edition.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mx8_video_ffi)', 'cfg(mx8_video_nvdec)'] }

[lib]
name = "mx8"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[features]
default = []
mx8_ebpf_net_pressure = []

[dependencies]
anyhow.workspace = true
fast_image_resize = "6"
claxon = "0.4"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mx8-core = { path = "../mx8-core" }
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-proto = { path = "../mx8-proto" }
mx8-runtime = { path = "../mx8-runtime", features = ["s3", "gcs", "azure"] }
mx8-snapshot = { path = "../mx8-snapshot", features = ["s3"] }
mx8-wire = { path = "../mx8-wire" }
google-cloud-storage = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
rayon = "1"
tokenizers = { version = "0.15", default-features = false, features = ["http", "onig"] }
tokio.workspace = true
tonic.workspace = true
turbojpeg = { version = "1.4", default-features = false, features = ["cmake", "pkg-config"] }
tracing.workspace = true
zune-jpeg = "0.5"

[target.'cfg(mx8_video_ffi)'.dependencies]
ffmpeg-next = "7"
