[package]
name = "mx8-runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
mx8-core = { path = "../mx8-core" }
mx8-observe = { path = "../mx8-observe" }
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
