[package]
name = "mx8-runtime"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
mx8-core = { path = "../mx8-core" }
mx8-observe = { path = "../mx8-observe" }
anyhow.workspace = true
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
