[package]
name = "mx8-snapshot"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
s3 = ["mx8-manifest-store/s3"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
mx8-core = { path = "../mx8-core" }
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-observe = { path = "../mx8-observe" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
