[package]
name = "mx8-snapshot"
version = "1.0.5"
edition.workspace = true
license.workspace = true

[features]
s3 = [
  "mx8-manifest-store/s3",
  "dep:aws-config",
  "dep:aws-sdk-s3",
  "dep:futures",
  "dep:tokio",
]

[dependencies]
anyhow.workspace = true
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
clap.workspace = true
futures = { workspace = true, optional = true }
hf-hub = "0.3.2"
mx8-core = { path = "../mx8-core" }
mx8-manifest-store = { path = "../mx8-manifest-store" }
mx8-observe = { path = "../mx8-observe" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
anyhow.workspace = true
