[package]
name = "mx8d-agent"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

mx8-observe = { path = "../mx8-observe" }
mx8-proto = { path = "../mx8-proto" }
