[package]
name = "mx8d-agent"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

mx8-observe = { path = "../mx8-observe" }
mx8-core = { path = "../mx8-core" }
mx8-proto = { path = "../mx8-proto" }
mx8-runtime = { path = "../mx8-runtime" }

[features]
default = []
s3 = ["mx8-runtime/s3"]

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
